[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shade_ils"
version = "2.0.1"
readme = "README.md"
description = "SHADE-ILS package."

keywords = ["shade_ils"]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: Stable",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = ["numpy>=1.22.4", "six>=1.16.0", "scipy>=1.8.1"]

[project.urls]
repository = "https://github.com/moesio-f/shadeils"

[tool.setuptools.packages.find]
where = ["src"]
