[metadata]
name = shadeils
version = 1.0
author = Moesio Filho
author_email = moesio.wenceslau@ufrpe.br
description = SHADE-ILS package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moesio-f/shadeils
project_urls =
    Bug Tracker = https://github.com/moesio-f/shadeils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    numpy==1.22.4
    six==1.16.0
    scipy==1.8.1

[options.packages.find]
where = src